--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ h1 {
     font-size: 1.5em;
 }
 
+button, ul {
+    all: unset;
+}
+/* ------------------- */
 .right{
     flex-grow: 1;
 }
@@ -20,21 +24,22 @@ h1 {
     flex-grow: 3;
 }
 
-#writeTodo{
+.todo__container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.writeTodo > input{
     all: unset;
     border-bottom: 1px solid slategrey;
     resize: horizontal;
-    width: 200px;
+    width: 250px;
 }
 
-#writeTodo :active {
-    width: auto;
-}
-
-#writeTodo :focus {
-    min-width: 200px;
-}
-
-#writeTodo::placeholder {
-    font-family: "Font Awesome 5 Free";
+.todo__container > div{
+    border-radius: 7px;
+    background-color: aquamarine;
+    width : 200px;
+    margin: 1.5px;
+    padding: 5px;
 }
