--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h1 {
     font-size: 1.5em;
 }
 
-button, ul {
+button, ul, input {
     all: unset;
 }
 
@@ -53,6 +53,7 @@ button {
     margin: 3px;
     padding: 5px;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
 }
 
@@ -71,4 +72,10 @@ button {
     margin-right: 10px;
     text-align: center;
     float: right;
+}
+
+.memo > form {
+    background-color: white;
+    height: 50px;
+    padding: 3px;
 }
