--- a/style.css
+++ b/style.css
@@ -51,10 +51,14 @@ button {
     border-radius: 7px;
     background-color: aquamarine;
     margin: 3px;
-    padding: 5px;
+    padding: 7px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+.todo__container > div > div:nth-child(1){
+    margin-bottom: 10px;
 }
 
 .donetodo {
@@ -76,7 +80,8 @@ button {
 }
 
 .memo > form {
-    background-color: white;
+    background-color: rgba(250,250,250,0.9);
     height: 50px;
     padding: 3px;
+    color: #868e96;
 }
