make pie-chart 50%

--- a/style.css
+++ b/style.css
@@ -114,3 +114,29 @@ body > div{
     font-size: 0.9rem;
     color: slategray;
 }
+
+.chart-part {
+    flex: unset;
+}
+
+.pie-chart {
+    position: relative;
+    display:inline-block;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    transition: 0.3s;
+    transition-timing-function: ease
+  }
+
+.persent {
+    background: #fff;
+    display : block;
+    position: absolute;
+    top:50%; left:50%;
+    width:200px; height:200px;
+    border-radius: 50%;
+    text-align:center; line-height: 200px;
+    font-size:30px;
+    transform: translate(-50%, -50%);
+  }
