--- a/style.css
+++ b/style.css
@@ -51,7 +51,6 @@ body > div{
 }
 
 .weather {
-    display: unset;
 }
 
 .writeTodo > input{
@@ -143,4 +142,9 @@ body > div{
     text-align:center; line-height: 100px;
     font-size:20px;
     transform: translate(-50%, -50%);
+  }
+
+  .refresh {
+      cursor: pointer;
+      text-decoration: underline;
   }
