if it's raining at 6pm warning message

--- a/style.css
+++ b/style.css
@@ -148,3 +148,8 @@ body > div{
       cursor: pointer;
       text-decoration: underline;
   }
+
+  .raining {
+      color: red;
+      background-color: rgba(227, 250, 252, 50);
+  }
